--- a/.deploy/nginx.conf
+++ b/.deploy/nginx.conf
@@ -31,7 +31,7 @@ log_format main_ext '$remote_addr - $remote_user [$time_local] "$request" '
 
 server {
     listen 80;
-    server_name localhost;
+    # server_name localhost;
     charset utf-8;
     root /var/www;
     index index.html;
