--- a/.deploy/nginx.conf
+++ b/.deploy/nginx.conf
@@ -67,7 +67,7 @@ server {
         add_header Cache-Control public;
     }
 
-    location = /favicon.ico {
+    location = /favicon.png {
        access_log off;
        log_not_found off;
     }
