--- a/.deploy/nginx.conf
+++ b/.deploy/nginx.conf
@@ -31,8 +31,23 @@ log_format main_ext '$remote_addr - $remote_user [$time_local] "$request" '
 
 server {
     listen 80;
-    # server_name localhost;
-    charset utf-8;
+    server_name podosintovik.org www.podosintovik.org;
+
+    # Redirect all HTTP requests to HTTPS
+    return 301 https://$host$request_uri;
+}
+
+
+server {
+    listen 443 ssl;
+    server_name podosintovik.org www.podosintovik.org;
+
+    ssl_certificate /etc/nginx/ssl/podosintovik.org.crt;
+    ssl_certificate_key /etc/nginx/ssl/podosintovik.org.key;
+
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_ciphers HIGH:!aNULL:!MD5;
+
     root /var/www;
     index index.html;
     autoindex off;
@@ -72,8 +87,7 @@ server {
        log_not_found off;
     }
 
-    # Health check endpoint. This will be used by kubernetes to determine if the
-    # container is ready/alive.
+    # Health check endpoint.
     location = /health {
         return 200 'OK';
     }
